# tree-sitter-racket

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml  test.yml
bindings/c/: tree-sitter-racket.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_racket/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRacket/: racket.h
bindings/swift/TreeSitterRacketTests/: TreeSitterRacketTests.swift
fuzztest/: README.md  gen_cases.rkt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: hash.rkt
test/scripts/: gen-corpus.mjs
