[package]
name = "tree-sitter-racket"
description = "Racket grammar for tree-sitter"
version = "0.23.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "racket"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-racket"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.23"

[build-dependencies]
cc = "1.0.87"
